k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgbye-ui
  namespace: bgbye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgbye-ui
  template:
    metadata:
      labels:
        app: bgbye-ui
    spec:
      containers:
        - name: ui
          image: bgbye-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"


          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3


          volumeMounts:
            - name: data
              mountPath: /app/website/static
              subPath: ui_static
            - name: data
              mountPath: /app/website/models
              subPath: ui_models

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bgbye-data-pvc
