k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgbye-ui-svc
  namespace: bgbye
spec:
  selector:
    app: bgbye-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
