k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgbye-ui-ingress
  namespace: bgbye
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
    - host: bgbye.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgbye-ui-svc
                port:
                  number: 80
